# docs/swagger.yaml
@@ -1,38 +1,24 @@
 basePath: /api/v1
 definitions:
-  elastic.Instance:
+  swagger.httpResponse:
     properties:
-      downcount:
+      count:
         type: integer
-      hostname:
+      message:
         type: string
-      ip:
-        type: string
-      mailed:
-        type: boolean
-      name:
-        type: string
-      port:
-        type: string
-      status:
-        type: string
-      timestamp:
-        type: string
-      zone:
-        type: string
+      result: {}
     type: object
 host: 10.107.12.65:8081
 info:
   contact:
-    email: seungnyeong@wemakeprice.com
-    name: CERT팀 김승녕 매니저
-    url: https://stash.wemakeprice.com/projects/SECUTECH/repos/wkms-alert/browse
-  description: wkms alert 서버입니다.
+    email: secutech@wemakeprice.com
+    name: 보안기술실 메일 전송
+  description: wkms alert moddule
   license:
     name: 위메프 CERT팀 제공
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
-  title: wkms-alert
+    url: https://stash.wemakeprice.com/projects/SECUTECH/repos/wkms-alert/browse
+  termsOfService: https://confluence.wemakeprice.com/pages/viewpage.action?pageId=206230173
+  title: wkms-alert module
   version: "1.0"
 paths:
   /job/instance:
@@ -46,8 +32,20 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/elastic.Instance'
-      summary: Get All Job
+            $ref: '#/definitions/swagger.httpResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/swagger.httpResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/swagger.httpResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/swagger.httpResponse'
+      summary: Alerting 이 되고 있는 인스턴스 전체 확인.
       tags:
       - 스케줄
   /job/start:
@@ -65,10 +63,22 @@ paths:
       - application/json
       responses:
         "200":
-          description: job ok
+          description: OK
           schema:
-            type: string
-      summary: Job 스케줄 실행
+            $ref: '#/definitions/swagger.httpResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/swagger.httpResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/swagger.httpResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/swagger.httpResponse'
+      summary: Alert Instance 등록
       tags:
       - 스케줄
   /users/{username}:
@@ -86,9 +96,9 @@ paths:
       - application/json
       responses:
         "200":
-          description: job ok
+          description: OK
           schema:
-            type: string
+            $ref: '#/definitions/swagger.httpResponse'
       summary: 사용자 조회
       tags:
       - 계정
@@ -96,15 +106,27 @@ paths:
     get:
       consumes:
       - application/json
-      description: 관리자 전체 조회
+      description: WKMS 관리자 전체 조회
       produces:
       - application/json
       responses:
         "200":
-          description: job ok
+          description: OK
           schema:
-            type: string
-      summary: 관리자 전체 조회
+            $ref: '#/definitions/swagger.httpResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/swagger.httpResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/swagger.httpResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/swagger.httpResponse'
+      summary: WKMS 관리자 전체 조회
       tags:
       - 계정
 swagger: "2.0"
